[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/LevelManager.gd" type="Script" id=1]
[ext_resource path="res://Scripts/GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/CreditsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/gradient1.png" type="Texture" id=4]
[ext_resource path="res://Art/Panic frozen.png" type="Texture" id=5]
[ext_resource path="res://Art/button_pressed2.png" type="Texture" id=6]
[ext_resource path="res://Art/button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Art/Icebergs/Iceberg-5_0000.png" type="Texture" id=8]
[ext_resource path="res://Art/button_pressed_mask.png" type="BitMap" id=9]
[ext_resource path="res://Art/Victory_card.png" type="Texture" id=10]
[ext_resource path="res://Other/Fonts/ARLRDBD.TTF" type="DynamicFontData" id=11]
[ext_resource path="res://Art/comic_cut/comic2.png" type="Texture" id=12]
[ext_resource path="res://Art/comic_cut/comic1.png" type="Texture" id=13]
[ext_resource path="res://Art/comic_cut/comic5.png" type="Texture" id=14]
[ext_resource path="res://Art/comicintrotransparent.png" type="Texture" id=15]
[ext_resource path="res://Art/comic_cut/comic3.png" type="Texture" id=16]
[ext_resource path="res://Art/comic_cut/comic4.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "pulse"
length = 0.5
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2, 0, -3.4733, 0, 3.4733, 2, -0.453825, -0.251503, 0.453825, 0.251503 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 2, -0.0115436, -3.22289, 0.0115436, 3.22289, 2, -0.489418, 0.030205, 0.489418, -0.030205 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=2]
resource_name = "bob"
length = 1.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 778.124, 280.5 ), Vector2( 778.124, 226.561 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.659754, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=5]
resource_name = "fade in"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("comic1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.287175, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("comic2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 0.287175, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("comic3:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 0.287175, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("comic4:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 0.287175, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("comic5:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 0.287175, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 0.287175, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LevelManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gradient1" type="Sprite" parent="GUI"]
self_modulate = Color( 0.65, 0.611, 0.611, 1 )
position = Vector2( 530.071, 208.357 )
scale = Vector2( 1.33712, 1.33712 )
texture = ExtResource( 4 )

[node name="TitleScreen" type="Control" parent="GUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 1024.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="GUI/TitleScreen"]
margin_left = 50.9424
margin_top = 197.776
margin_right = 450.942
margin_bottom = 497.776
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_click_mask = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/TitleScreen/Play"]
margin_left = 139.343
margin_top = 136.346
margin_right = 260.343
margin_bottom = 181.346
custom_colors/font_color = Color( 0.117647, 0.121569, 0.282353, 1 )
text = "Play"

[node name="Controls" type="TextureButton" parent="GUI/TitleScreen"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 447.523
margin_top = 63.2817
margin_right = 894.523
margin_bottom = 363.282
rect_scale = Vector2( -1, -1 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_click_mask = ExtResource( 9 )

[node name="Label2" type="Label" parent="GUI/TitleScreen/Controls"]
margin_left = 333.651
margin_top = 177.83
margin_right = 599.651
margin_bottom = 222.83
rect_scale = Vector2( -1, -1 )
custom_colors/font_color = Color( 0.117647, 0.121569, 0.282353, 1 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/TitleScreen"]
visible = false
margin_left = 392.151
margin_top = 229.688
margin_right = 726.151
margin_bottom = 295.688
rect_rotation = 19.6358
rect_scale = Vector2( 2.55646, 2.57414 )
rect_pivot_offset = Vector2( 165.746, 31.835 )
text = "Ze Best game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/TitleScreen/Label"]
autoplay = "pulse"
anims/pulse = SubResource( 1 )

[node name="Panic frozen" type="Sprite" parent="GUI/TitleScreen"]
position = Vector2( 778.124, 226.935 )
rotation = -0.132976
scale = Vector2( 1.73543, 1.73543 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/TitleScreen/Panic frozen"]
autoplay = "bob"
anims/bob = SubResource( 2 )

[node name="Title" type="Label" parent="GUI/TitleScreen"]
margin_left = 40.4543
margin_top = 103.383
margin_right = 388.454
margin_bottom = 196.383
rect_rotation = -3.61879
rect_scale = Vector2( 1.51383, 1.51383 )
text = "Frosty Boy's 
Freakout!"
align = 1

[node name="ControlsScreen" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Label" parent="GUI/ControlsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = 27.0
margin_right = -624.0
margin_bottom = -288.0
text = "Move Up:
Move Down:
Move Right:
Move Left:
Throw Rope:
Pull Rope:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls2" type="Label" parent="GUI/ControlsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 433.107
margin_top = 27.0
margin_right = -44.8933
margin_bottom = -288.0
text = "w
s
d
a
left click
SPAM Space!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls3" type="Label" parent="GUI/ControlsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 566.68
margin_top = 27.0
margin_right = 88.6797
margin_bottom = -288.0
text = "up
down
right
left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="GUI/ControlsScreen"]
margin_left = 52.4407
margin_top = 346.109
margin_right = 452.441
margin_bottom = 646.109
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_click_mask = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/ControlsScreen/Back"]
margin_left = 139.343
margin_top = 136.346
margin_right = 260.343
margin_bottom = 181.346
custom_colors/font_color = Color( 0.117647, 0.121569, 0.282353, 1 )
text = "Back"

[node name="Label" type="Label" parent="GUI/ControlsScreen"]
margin_left = 706.13
margin_top = 347.058
margin_right = 1092.13
margin_bottom = 392.058
rect_rotation = -21.6327
rect_scale = Vector2( 0.651781, 0.651781 )
text = "or left click!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsScreen" parent="GUI" instance=ExtResource( 3 )]
visible = false

[node name="Fade" type="ColorRect" parent="GUI"]
visible = false
self_modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/Fade"]
anims/fade = SubResource( 3 )

[node name="WinCard" type="TextureRect" parent="GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedRunTimer" type="Label" parent="GUI/WinCard"]
margin_left = 905.535
margin_top = 21.2221
margin_right = 992.535
margin_bottom = 87.2221
grow_horizontal = 0
rect_pivot_offset = Vector2( 83.2811, 30.1879 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "123"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comic" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comicintrotransparent" type="TextureRect" parent="GUI/Comic"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comic1" type="TextureRect" parent="GUI/Comic"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comic2" type="TextureRect" parent="GUI/Comic"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true

[node name="comic3" type="TextureRect" parent="GUI/Comic"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )
expand = true

[node name="comic4" type="TextureRect" parent="GUI/Comic"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 17 )
expand = true

[node name="comic5" type="TextureRect" parent="GUI/Comic"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/Comic"]
playback_speed = 0.5
"anims/fade in" = SubResource( 5 )

[node name="Label" type="Label" parent="GUI/Comic"]
margin_left = 561.443
margin_top = 533.159
margin_right = 1074.44
margin_bottom = 578.159
text = "click to continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GUI/TitleScreen/Play" to="GUI" method="_on_Play_pressed"]
[connection signal="pressed" from="GUI/TitleScreen/Controls" to="GUI" method="_on_Options_pressed"]
[connection signal="pressed" from="GUI/ControlsScreen/Back" to="GUI" method="_on_Back_pressed"]
[connection signal="gui_input" from="GUI/CreditsScreen" to="GUI" method="_on_CreditsScreen_gui_input"]
[connection signal="gui_input" from="GUI/WinCard" to="GUI" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="GUI/Comic" to="GUI" method="_on_Comic_gui_input"]
